# QiTV

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  activity.md  channel_list.py  config_manager.py  content_loader.py  dialog.py  epg_manager.py  gui.py  image_loader.py  image_manager.py  main.py  movies_list.py  multikeydict.py  options.py  plan.md  player.py  player3.py  player4.py  player5.py  provider_manager.py  proxy_server.py  pyproject.toml  qitv-linux.spec  qitv-macos-intel.spec  qitv-macos.spec  qitv-windows.spec  qitv-x86_64.spec  qitv.spec  requirements.txt  server.py  sleep_manager.py  update_checker.py  video_player.py  workers.py
.github/workflows/: main.yml
assets/: icon.icns  qitv.desktop  qitv.icns
mixins/: __init__.py  content_loading_mixin.py  display_mixin.py  export_mixin.py  playback_mixin.py
scripts/: install-linux.sh
services/: __init__.py  export.py  m3u.py  provider_api.py
widgets/: __init__.py  autoplay_dialogs.py  delegates.py  menu_bar.py  sidebar.py  top_bar.py
