[project]
name = "qitv"
version = "1.7.3"
description = "A cross-platform STB and IPTV player client"
requires-python = ">=3.14"
dependencies = [
    "aiohttp[speedups]>=3.13.1",
    "m3u-parser>=0.4.2",
    "orjson>=3.11.3",
    "packaging>=25.0",
    "pyqtdarktheme==2.1.0",
    "pyside6>=6.10.0",
    "python-vlc==3.0.20123",
    "requests==2.32.3",
    "tzlocal>=5.3.1",
    "urllib3==2.2.2",
    "urlobject~=2.4.3",
]

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_sort_within_sections = true

[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
strict_equality = true
plugins = []

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
select = ["E9", "F63", "F7", "F82"]

# Developer tools used in CI and locally
[dependency-groups]
dev = [
  "pyinstaller>=6.10",
  "black==25.9.0",
  "isort==5.13.2",
  "mypy==1.11.2",
  "flake8==7.0.0",
  "types-requests",
  "types-tzlocal",
]
